# travelsure

./: .codecov.yaml  .gitignore  README.md  pytest.ini  requirements-tests.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yaml
src/apps/: admin_utils.py  fields.py  serializers.py  views.py
src/apps/autoschema/: __init__.py  autoschema.py  inspectors.py
src/apps/claims/: admin.py  apps.py  enums.py  models.py  signal_handlers.py  utils.py
src/apps/claims/api/: serializers.py  validations.py  views.py
src/apps/claims/migrations/: 0001_initial.py  0002_alter_claim_claim_date.py  0003_alter_claim_status.py  0004_alter_claim_claim_date.py
src/apps/policy/: admin.py  apps.py  enums.py  models.py  signal_handlers.py  tasks.py  utils.py
src/apps/policy/api/: serializers.py  views.py
src/apps/policy/migrations/: 0001_initial.py  0002_alter_policy_options.py  0003_remove_policy_price_policy_paid.py
src/apps/users/: admin.py  models.py
src/apps/users/api/: serializers.py  views.py
src/apps/users/migrations/: 0001_initial.py
src/apps/utils/: model_utils.py  utils.py
src/project/: schema.py  settings.py  settings_test.py  urls.py
src/project/management/commands/: load_dummy_data.py
src/project/templates/emails/: email_base.html
src/project/templates/emails/claims/: claim_confirmation.html  (+2 more)
tests/: base.py  factories.py  utils.py
tests/apps/: test_admin_utils.py  test_fields.py
tests/apps/claims/: test_claim_results.py  test_claims_api.py
tests/apps/policy/: test_policy_api.py  test_policy_tasks.py
tests/apps/users/: test_users_api.py
(+1 files in other folders)
