[metadata]
name = travelsure
description = Travel insurance
url = https://git@github.com:Wynand91/travelsure.git

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.11
packages = find:
package_dir = =src

[options.packages.find]
where = src

[flake8]
exclude = build,migrations,.tox,venv,.eggs
max-line-length = 160
max-complexity = 15
ignore =
    # E731: do not assign a lambda expression, use a def
    E731
    # W503: Allow line break before binary operator as recommended in recent PEP8
    W503
    # F541: missing placeholders on f-string
    F541


[coverage:run]
# https://coverage.readthedocs.io/en/stable/config.html
branch = True
source = src/
omit =
    tests/*
    */test_*.py
    */tests/*.py
    */migrations/*.py
    src/project/wsgi.py
    src/project/settings.py
    src/project/settings_test.py
